# skill-path-python-project

./: README.md  pyproject.toml  ruff.toml
src/: exercises.py  generate_data.py  header_print.py
src/solutions/: README.md  exercise_1_1.py  exercise_1_2.py  exercise_1_3.py  exercise_1_4.py  exercise_4_1.py  exercise_4_6.py  exercise_4_8.py  sample_solutions.txt
